Replaced secondary colors

--- a/app/assets/stylesheets/_buttons_and_icons.sass
+++ b/app/assets/stylesheets/_buttons_and_icons.sass
@@ -18,7 +18,7 @@
     color: #FFF
 
   &:active
-    background-color: $secondary-color-3
+    background-color: $color-green-3
 
 .submit-buttons
   margin-top: 1rem
@@ -53,7 +53,7 @@ thead
     border: none
     background-color: $color-blue-1
     &:hover
-      background-color: $primary-color-3
+      background-color: $color-blue-3
     &.select-all
       border-top-right-radius: 0
       border-bottom-right-radius: 0
@@ -61,7 +61,7 @@ thead
       border-top-left-radius: 0
       border-bottom-left-radius: 0
       margin-left: -5px
-      border-left: 1px solid $primary-color-4
+      border-left: 1px solid $color-blue-4
 
 tbody
   ul.button-bar
