--- a/app/assets/stylesheets/_collapse.sass
+++ b/app/assets/stylesheets/_collapse.sass
@@ -8,5 +8,5 @@ h3.collapse.open a i.fa.fa-angle-double-right.fa-fw
   transform: rotate(90deg)
 
 h3.collapse.open a
-  color: $secondary-color-2
+  color: $color-green-2
 
