--- a/app/assets/stylesheets/_context_menu.sass
+++ b/app/assets/stylesheets/_context_menu.sass
@@ -1,5 +1,5 @@
 .context_menu
-  background-color: $secondary-color-2
+  background-color: $color-green-2
   height: 2rem
   margin: 0
   width: 100%
