--- a/app/assets/stylesheets/_grades.sass
+++ b/app/assets/stylesheets/_grades.sass
@@ -71,11 +71,11 @@ label.disabled
 
 #available
   padding: 1rem
-  background-color: lighten($secondary-color-3, 40%)
+  background-color: lighten($color-green-3, 40%)
   min-height: 300px
 
 #awarded
-  background-color: lighten($secondary-color-3, 20%)
+  background-color: lighten($color-green-3, 20%)
   padding: 1rem
   min-height: 300px
 
