--- a/app/assets/stylesheets/_layout.sass
+++ b/app/assets/stylesheets/_layout.sass
@@ -128,7 +128,7 @@ form .tabs-content .content
 hr.dotted
   border-color: #FFF
   border: 0
-  border-bottom: 1px dashed $secondary-color-3
+  border-bottom: 1px dashed $color-green-3
 
   &.no-margin
     margin: 0
@@ -150,7 +150,7 @@ a:hover + .display_on_hover
   padding: 0.5rem
   width: 250px
   font-size: .9rem
-  background-color: $secondary-color-3
+  background-color: $color-green-3
   color: #FFF
   border-radius: $global-radius
   z-index: 10
