--- a/app/assets/stylesheets/_rubrics.sass
+++ b/app/assets/stylesheets/_rubrics.sass
@@ -57,7 +57,7 @@
     .points-missing
       color: lighten($color-yellow-1, 30%)
     .points-satisfied
-      color: $secondary-color-3
+      color: $color-green-3
     .points-overage
       color: $color-red-1
 
@@ -351,10 +351,10 @@ button.delete
       height: 105%
 
   h4.notice
-    color: $secondary-color-3
+    color: $color-green-3
 
 #grade-rubric-table.edit
 
   .tier:hover 
-    background-color: lighten($secondary-color-3, 30%)
+    background-color: lighten($color-green-3, 30%)
 
