--- a/app/assets/stylesheets/_student_dashboard.sass
+++ b/app/assets/stylesheets/_student_dashboard.sass
@@ -25,7 +25,7 @@ img.earned
 
 .bar_magic.success
   color: #FFF
-  background-color: $secondary-color-3
+  background-color: $color-green-3
 
   .has-tip
     color: #FFF
@@ -36,7 +36,7 @@ p.predictor-description
 /*striping on course progress display*/
 .striped
   width: 100%
-  background-image: repeating-linear-gradient(45deg, transparent, transparent 35px, $primary-color-4 35px, $primary-color-4 70px)
+  background-image: repeating-linear-gradient(45deg, transparent, transparent 35px, $color-blue-4 35px, $color-blue-4 70px)
 
 #levels_per_assignment
   min-height: 200px
