--- a/app/assets/stylesheets/_student_sidebar.sass
+++ b/app/assets/stylesheets/_student_sidebar.sass
@@ -16,7 +16,7 @@
     ul li
       display: inline
       a:hover
-        background-color: $secondary-color-3
+        background-color: $color-green-3
 
   .panel
     margin-bottom: 1.25rem
@@ -25,7 +25,7 @@
       margin-bottom: 0rem
 
   a
-    color: $primary-color-4
+    color: $color-blue-4
 
   hr
     margin: .25rem 0
@@ -37,7 +37,7 @@
     padding: 0
 
   .form_label 
-    color: $secondary-color-3
+    color: $color-green-3
 
   .todo li
     list-style-type: none
@@ -52,7 +52,7 @@
       padding-bottom: 0
       margin-bottom: 0
     .button:hover
-      background-color: $primary-color-3
+      background-color: $color-blue-3
 
   ul.block-grid
     margin: 0.5rem auto !important
