--- a/app/assets/stylesheets/_tables.sass
+++ b/app/assets/stylesheets/_tables.sass
@@ -32,7 +32,7 @@ table
 
 /* Styling pattern tables for assignment outcome overview */
 td.complete, tr.achieved
-  background-color: $secondary-color-1
+  background-color: $color-green-1
 
 i.complete
   color: red
@@ -44,10 +44,10 @@ i.absent
   color: black
 
 td.partial
-  background-color: $primary-color-3
+  background-color: $color-blue-3
 
 i.partial
-  color: $secondary-color-3
+  color: $color-green-3
 
 i.missing_grade
   color: #CCC
@@ -80,7 +80,7 @@ i.missing_grade
 
 #leaderboard .name, #leaderboard .score
   padding: 0.5rem
-  background-color: $primary-color-4
+  background-color: $color-blue-4
 
 #leaderboard .score
   font-weight: bold
