--- a/app/assets/stylesheets/_tabs.sass
+++ b/app/assets/stylesheets/_tabs.sass
@@ -32,11 +32,11 @@
   border-bottom: 10px solid lighten($color-blue-0, 10%)
 
   li.ui-state-default
-    background: lighten($secondary-color-2, 30%) !important
+    background: lighten($color-green-2, 30%) !important
     border: 0
 
     &:hover
-      background: $secondary-color-2 !important
+      background: $color-green-2 !important
 
     &.ui-state-active
       background: lighten($color-blue-0, 10%) !important
