--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -102,7 +102,7 @@
   padding: 4px 0
   display: block
   z-index: 1
-  color: $secondary-color-2
+  color: $color-green-2
 
 .btn-navbar-left
   position: absolute
@@ -114,7 +114,7 @@
   padding: 4px 0 0 10px
   display: block
   z-index: 1
-  color: $secondary-color-2
+  color: $color-green-2
 
 
 @media screen and (min-width: $media-small-max)
@@ -140,7 +140,7 @@
     margin: 0
     padding: 0
     font-size: .9rem
-    background: lighten($primary-color-4, 20%)
+    background: lighten($color-blue-4, 20%)
     li a
       padding: 5px 10px
       display: block
@@ -200,7 +200,7 @@ img.profile-pic
   .the-nav > .nav > li a
     display: block
     padding: 10px 1rem
-    color: $primary-color-4
+    color: $color-blue-4
     font-weight: 400
     text-decoration: none
     .course_name 
@@ -212,7 +212,7 @@ img.profile-pic
 
     .tagline
       margin-left: .5rem
-      color: $secondary-color-3
+      color: $color-green-3
 
   /* Active State */ 
   .the-nav > .nav > li:hover > a
@@ -220,7 +220,7 @@ img.profile-pic
     background-color: darken($color-blue-0, 5%)
   .the-nav > .nav > li:hover > a.no-hover
     background-color: $color-blue-00
-    color: $primary-color-4
+    color: $color-blue-4
   .the-nav > .nav > li:hover .subnav
     display: block
 
@@ -236,7 +236,7 @@ img.profile-pic
     padding: 0
     min-width: 180px
     font-size: .8rem
-    background: lighten($primary-color-4, 10%)
+    background: lighten($color-blue-4, 10%)
     border-bottom-left-radius: $global-radius
     border-bottom-right-radius: $global-radius
     &.class-info
