--- a/app/assets/stylesheets/_typography.sass
+++ b/app/assets/stylesheets/_typography.sass
@@ -54,7 +54,7 @@ a
   color: lighten($color-blue-0, 10%)
 
 a:hover
-  color: $secondary-color-1
+  color: $color-green-1
 
 hr
   border-color: $color-grey-1
@@ -96,7 +96,7 @@ h4.subtitle.fail
   color: $alert-color
 
 h4.subtitle.success
-  color: $secondary-color-1
+  color: $color-green-1
 
 h4.assignment_name
   margin-bottom: .5rem
@@ -130,10 +130,10 @@ h5.section-title
     color: #FFF
 
 .label a:hover
-  color: $primary-color-4
+  color: $color-blue-4
 
 .label.success
-  background-color: $secondary-color-3
+  background-color: $color-green-3
 
 .label.alert
   background-color: $alert-color
