--- a/app/assets/stylesheets/_alerts.sass
+++ b/app/assets/stylesheets/_alerts.sass
@@ -1,6 +1,6 @@
 .alert-box
   padding: .25rem .5rem !important
-  background-color: $primary-color-5
+  background-color: $color-blue-5
   color: #FFF
   opacity: 0.7
   border-radius: $global-radius
