--- a/app/assets/stylesheets/_homepage.sass
+++ b/app/assets/stylesheets/_homepage.sass
@@ -17,7 +17,7 @@ section.features
   height: 400px
 
 .newsletter-container
-  background-color: $primary-color-3
+  background-color: $color-blue-3
   opacity: .8
   padding: 2rem 0
 
@@ -35,7 +35,7 @@ section.features
   padding: 0
 
 .video-container
-  background-color: $primary-color-3
+  background-color: $color-blue-3
   opacity: .9
 
 
@@ -77,7 +77,7 @@ section.video-promo, section.newsletter, section.press, section.forgot-password,
         padding: 0 1rem
 
       a
-        color: $secondary-color-3
+        color: $color-green-3
 
     &.twitter
       float: left
@@ -107,7 +107,7 @@ section.video-promo, section.newsletter, section.press, section.forgot-password,
       padding: 0
 
       a
-        color: $primary-color-4
+        color: $color-blue-4
 
   .two-thirds
     width: 66%
@@ -161,14 +161,14 @@ section.video-promo, section.newsletter, section.press, section.forgot-password,
         border: 0
         margin-bottom: .75rem
       input:focus
-        background-color: lighten($secondary-color-3, 30%)
+        background-color: lighten($color-green-3, 30%)
         color: #000
 
       a 
         left: -2rem
         top: .25rem
         position: relative
-        color: $secondary-color-3
+        color: $color-green-3
 
       .button
         position: relative
