--- a/app/assets/stylesheets/_staff_sidebar.sass
+++ b/app/assets/stylesheets/_staff_sidebar.sass
@@ -33,7 +33,7 @@
   h5
     font-size: .9rem
     font-weight: 100
-    color: $primary-color-4
+    color: $color-blue-4
     margin: 0 0 0 0.25rem
 
   ul
@@ -49,7 +49,7 @@
     font-weight: 800
 
     &:not(a)
-      color: $secondary-color-3
+      color: $color-green-3
 
     a
       display: block !important
