display of icons

--- a/app/assets/stylesheets/_icons.sass
+++ b/app/assets/stylesheets/_icons.sass
@@ -6,3 +6,7 @@ i.fa-slack
 
 .yellow
   color: $color-yellow-1
+
+i.fa-group, i.fa-key, i.fa-lock, i.fa-group, i.fa-exclamation-circle
+  clear: both
+  padding: .25rem 0 
