--- a/app/views/assignments/_form.haml
+++ b/app/views/assignments/_form.haml
@@ -145,7 +145,7 @@
     = f.input :visible_when_locked
 
     .unlock-conditions
-      %p.hint Unlock description here
+      %p.hint Unlocks allow you to direct the sequence of content in your course. What do students need to do in order to unlock <strong> this </strong> assignment?
       %script(id="unlock-condition-template" type="text/x-template")
         %fieldset.unlock-condition
           = f.simple_fields_for :unlock_conditions, UnlockCondition.new, class: 'form-inline', child_index: 'child_index' do |ucf|
