--- a/app/views/grades/_rubric_grade_results.haml
+++ b/app/views/grades/_rubric_grade_results.haml
@@ -17,44 +17,33 @@
           .metric-heading
             .metric-name= metric.wrapped_name(28).html_safe
             .metric-points= "#{points metric.max_points} Points"
+            .clear
           .metric-description= metric.wrapped_description(40).html_safe
 
         - metric.tiers.order("points ASC").each do |tier|
-          - if (current_user_is_staff? && @viewable_rubric_grades.select {|rubric_grade| rubric_grade.tier_id == tier[:id] }.count > 0) || (current_user_is_student? && @rubric_grades.select {|rubric_grade| rubric_grade.tier_id == tier[:id] }.count > 0)
-            %td.tier.tier-level.selected
-              .tier-heading
-                .tier-name= tier.wrapped_name(25).html_safe
-                .tier-points= "#{points tier.points} Points"
-              .tier-description= tier.description
-
-              .badges
-                - tier.tier_badges.each_with_index do |badge, index|
-                  - if index < 2
-                    %span.tier-badge-image
-                      %img{:src => badge.badge.icon }
-              - if current_user_is_staff?
-                .earned_tier #{current_student.first_name} earned this level
-              - elsif current_user_is_student? 
-                .earned_tier I earned this level
-
-              - if tier.rubric_grades.size > 0 && ! current_course.hide_analytics? && ! @assignment.hide_analytics?
-                .graded-students= "#{pluralize(tier.rubric_grades.size, 'student')} earned this level"
-          - else
-            %td.tier.tier-level
-              .tier-heading
-                .tier-name= tier.wrapped_name(25).html_safe
-                .tier-points= "#{points tier.points} Points"
-              .tier-description= tier.description
-
-              .badges
-                - tier.tier_badges.each_with_index do |badge, index|
-                  - if index < 2
-                    %span.tier-badge-image
-                      %img{:src => badge.badge.icon }
+          %td.tier.tier-level
+            .tier-heading
+              .tier-name= tier.wrapped_name(25).html_safe
               .clear
-              - if tier.rubric_grades.size > 0 && ! current_course.hide_analytics? && ! @assignment.hide_analytics?
-                .graded-students= "#{pluralize(tier.rubric_grades.size, 'student')} earned this level"
-                   
+              .tier-points= "#{points tier.points} Points"
+            .clear
+            .tier-description= tier.description
+
+            .row.badge-row
+              - tier.tier_badges.each_with_index do |badge, index|
+                - if index < 2
+                  %span.tier-badge-image
+                    %img{:src => badge.badge.icon, width: "30px", height: "30px" }
+              .clear
+
+            - if current_user_is_staff? && @viewable_rubric_grades.select {|rubric_grade| rubric_grade.tier_id == tier[:id] }.count > 0
+              .earned_tier #{current_student.first_name} earned this level
+            - elsif current_user_is_student? && @rubric_grades.select {|rubric_grade| rubric_grade.tier_id == tier[:id] }.count > 0
+              .earned_tier I earned this level
+
+            - if tier.rubric_grades.size > 0
+              .students-padding
+              .graded-students= "#{pluralize(tier.rubric_grades.size, 'student')} earned this level"
         - if metric.tiers.size < @rubric.max_tier_count
           %td.filler(colspan="#{@rubric.max_tier_count - metric.tiers.size}")
         %td.tier.tier-comments.comments-box
