--- a/app/views/grades/_rubric_grade_results.haml
+++ b/app/views/grades/_rubric_grade_results.haml
@@ -41,9 +41,10 @@
             - elsif current_user_is_student? && @rubric_grades.select {|rubric_grade| rubric_grade.tier_id == tier[:id] }.count > 0
               .earned_tier I earned this level
 
-            - if tier.rubric_grades.size > 0
-              .students-padding
-              .graded-students= "#{pluralize(tier.rubric_grades.size, 'student')} earned this level"
+            - if ! current_course.hide_analytics? && ! @assignment.hide_analytics?
+              - if tier.rubric_grades.size > 0
+                .students-padding
+                .graded-students= "#{pluralize(tier.rubric_grades.size, 'student')} earned this level"
         - if metric.tiers.size < @rubric.max_tier_count
           %td.filler(colspan="#{@rubric.max_tier_count - metric.tiers.size}")
         %td.tier.tier-comments.comments-box
