--- a/app/assets/stylesheets/color.sass
+++ b/app/assets/stylesheets/color.sass
@@ -45,6 +45,16 @@ $color-white: $color-grey-5 // alias
 $txt-color-inverse: $color-white
 $alert-color: $color-orange-1
 
+// Needs more useful names, or just use colors vars:
+$primary-color-1: $color-blue-0
+$primary-color-2: $color-blue-1
+$primary-color-3: $color-blue-3
+$primary-color-4: $color-blue-4
+$primary-color-5: $color-blue-5
+$secondary-color-1: $color-green-1
+$secondary-color-2: $color-green-2
+$secondary-color-3: $color-green-3
+
 // COLOR AID CLASSES:
 
 .color-bar
