add @import 'color_palette' on application.css

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -50,6 +50,7 @@ $media-xlarge-max:  120rem; //
 /* Importing supporting files. If you create a new css file you'll need to add it here.  */
 
 @import 'color';
+@import 'color_palette';
 @import 'accessibility';
 @import 'alerts';
 @import 'analytics';
