Updated font color

--- a/app/assets/stylesheets/_rubrics.sass
+++ b/app/assets/stylesheets/_rubrics.sass
@@ -334,7 +334,9 @@ button.delete
     padding: .25rem
 
   .earned_tier
-    background-color: $color-green-3
+    background-color: darken($color-green-3, 10%)
+    color: #FFF
+    font-style: italic
 
   .graded-students 
     background-color: $color-blue-3
