Condensed the styles to rely on current standards for page template and fonts

--- a/app/assets/stylesheets/color_palette.sass
+++ b/app/assets/stylesheets/color_palette.sass
@@ -1,39 +1,14 @@
-#color-palette
-  margin: 110px 5% 80px 5%
-  padding: 20px 40px
-  background: white
-  border: 1px solid #ddd
+.color-group
+  padding-bottom: 8rem
 
-  #page-title
-    margin-top: 8px
-    font-weight: normal
-    font-size: 32px
-    color: #333
+.color-block-set
+  float: left
+  margin: 1rem 1rem 0 0
 
-  .color-group
-    margin-bottom: 40px
-    padding-bottom: 50px
-    clear: both
+.color-block
+  width: 90px
+  height: 60px
+  border: 1px solid #bbb
 
-  .group-title
-    font-size: 18px
-    font-weight: normal
-    color: #555
-    margin-bottom: 0
-    padding-bottom: 0
-
-  .color-bar
-    width: 100%
-    clear: both
-
-  .color-block-set
-    float: left
-    margin: 10px 2%
-
-  .color-block
-    width: 120px
-    height: 90px
-    border: 2px solid #bbb
-
-  .color-name
-    color: #555
+.color-name
+  font-size: .8rem
