--- a/app/views/home/color_theme.html.haml
+++ b/app/views/home/color_theme.html.haml
@@ -1,32 +1,33 @@
-#color-palette
-  %h2#page-title Gradecraft System Color Palette
+%h3.pagetitle Gradecraft System Color Palette
+
+.pageContent
 
   .color-group
-    %h4.group-title Blues
+    %h4 Blues
     .color-bar
       != color_block_set("blue", %w[ 00 0 1 2 3 4 5 ])
 
   .clear
 
   .color-group
-    %h4.group-title Alternative Blues
+    %h4 Alternative Blues
     .color-bar
       != color_block_set("alt-blue", %w[ 0 1 2 3 ])
 
   .color-group
-    %h4.group-title Greens
+    %h4 Greens
     .color-bar
       != color_block_set("green", %w[ 0 1 2 3 5 ])
 
   .color-group
-    %h4.group-title Warm Hues
+    %h4 Warm Hues
     .color-bar
       != color_block_set("red", %w[ 1 2 ])
       != color_block_set("orange", %w[ 1 2 3 ])
       != color_block_set("yellow", %w[ 1 2 ])
 
   .color-group
-    %h4.group-title Gr[ea]ys
+    %h4 Gr[ea]ys
     .color-bar
       != color_block_set("grey", %w[ 00 0 1 2 3 4 5 ])
 
