--- a/app/views/assignments/_view_assignment_management.html.haml
+++ b/app/views/assignments/_view_assignment_management.html.haml
@@ -1,17 +1,13 @@
 = content_nav_for @assignment
 
-- if @assignment.pass_fail?
-  %h3.pagetitle= "#{@title} (#{term_for :pass}/#{term_for :fail})"
-- else
-  %h3.pagetitle= "#{@title} (#{ points @assignment.point_total } points)"
-
+%h3.pagetitle= presenter.title
 
 // Button bar at the top of the page
 = render "buttons"
 
 .pageContent
   = render 'layouts/alerts'
-  
+
   #tabs.ui-tabs.ui-widget
     %ul.ui-tabs-nav{:role => "tablist"}
       %li
