Use the presenter within the assignment buttons partial

--- a/app/views/assignments/_view_assignment_management.html.haml
+++ b/app/views/assignments/_view_assignment_management.html.haml
@@ -1,9 +1,9 @@
-= content_nav_for @assignment
+= content_nav_for presenter.assignment
 
 %h3.pagetitle= presenter.title
 
 // Button bar at the top of the page
-= render "buttons"
+= render partial: "buttons", locals: { presenter: presenter }
 
 .pageContent
   = render 'layouts/alerts'
