--- a/app/views/assignments/_buttons.html.haml
+++ b/app/views/assignments/_buttons.html.haml
@@ -1,42 +1,42 @@
-.context_menu(ng-app="gradecraft" ng-controller="AssignmentCtrl" ng-init="init(#{@assignment[:id]}, #{@assignment.use_rubric})")
+.context_menu(ng-app="gradecraft" ng-controller="AssignmentCtrl" ng-init="init(#{presenter.assignment.id}, #{presenter.assignment.use_rubric})")
   %ul
-    - if @assignment.persisted?
+    - if !presenter.new_assignment?
       %li
         %a{:href => new_assignment_path }
           %i.fa.fa-plus.fa-fw
           New #{(term_for :assignment).titleize}
-      %li= link_to raw('<i class="fa fa-edit fa-fw"> </i> Edit'), edit_assignment_path(@assignment)
-      - if @assignment.has_groups?
+      %li= link_to raw('<i class="fa fa-edit fa-fw"> </i> Edit'), edit_assignment_path(presenter.assignment)
+      - if presenter.assignment.has_groups?
         %li= link_to raw("<i class='fa fa-users fa-fw'> </i> Create #{term_for :group}"), new_group_path
-      - if @team.present? && ! ( @assignment.rubric and @assignment.rubric.designed? and @assignment.use_rubric? )
-        %li= link_to raw('<i class="fa fa-check fa-fw"> </i> Quick Grade'), mass_grade_assignment_path(@assignment, :team => @team)
-      - elsif ! ( @assignment.rubric and @assignment.rubric.designed? and @assignment.use_rubric? )
-        %li= link_to raw('<i class="fa fa-check fa-fw"> </i> Quick Grade'), mass_grade_assignment_path(@assignment)
-      / - if @assignment.submissions.present?
+      - if presenter.for_team? && !presenter.rubric_available?
+        %li= link_to raw('<i class="fa fa-check fa-fw"> </i> Quick Grade'), mass_grade_assignment_path(presenter.assignment, team: presenter.team)
+      - elsif !presenter.rubric_available?
+        %li= link_to raw('<i class="fa fa-check fa-fw"> </i> Quick Grade'), mass_grade_assignment_path(presenter.assignment)
+      / - if presenter.assignment.submissions.present?
       /   %li
-      /     %a{:href => export_submissions_assignment_path(@assignment, :team_id => @team, format: 'zip') }
+      /     %a{:href => export_submissions_assignment_path(presenter.assignment, :team_id => presenter.team, format: 'zip') }
       /       %i.fa.fa-zip-o.fa-fw
       /       Download Submissions
       %li
-        %a{:href => import_grades_assignment_path(@assignment) }
+        %a{:href => import_grades_assignment_path(presenter.assignment) }
           %i.fa.fa-upload.fa-fw
           Import Grades
       %li
-        %a{:href => export_grades_assignment_path(@assignment, format: 'csv') }
+        %a{:href => export_grades_assignment_path(presenter.assignment, format: 'csv') }
           %i.fa.fa-download.fa-fw
           Download Grades
       %li
-        %a{:href => design_assignment_rubric_path(@assignment) }
+        %a{:href => design_assignment_rubric_path(presenter.assignment) }
           %i.fa.fa-sliders.fa-fw
-          - if @assignment.rubric and @assignment.rubric.designed?
+          - if presenter.rubric_available?
             Edit Rubric
           - else
             Create Rubric
 
-      - if @assignment.rubric and @assignment.rubric.designed?
-        - if @assignment.grades.instructor_modified.present?
+      - if presenter.rubric_available?
+        - if presenter.has_reviewable_grades?
           %li
-            %a{:href => rubric_grades_review_assignment_path(@assignment) }
+            %a{:href => rubric_grades_review_assignment_path(presenter.assignment) }
               Review Grades
         %li.on(ng-cloak ng-show="useRubric")
           %a(ng-click="rubricsOff()")
