--- a/app/views/assignments/new.html.haml
+++ b/app/views/assignments/new.html.haml
@@ -2,7 +2,7 @@
 
 %h3.pagetitle= @title
 
-= render "buttons"
+= render partial: "buttons", locals: { presenter: presenter }
 
 .pageContent
   = render 'form'
