--- a/app/views/assignments/rubric_grades_review.html.haml
+++ b/app/views/assignments/rubric_grades_review.html.haml
@@ -2,11 +2,11 @@
 
 %h3.pagetitle= "#{@title} Review Rubric Grades (#{ points @assignment.point_total } points)"
 
-= render "buttons"
+= render partial: "buttons", locals: { presenter: presenter }
 
 .pageContent
   = render 'layouts/alerts'
-  
+
   - if @assignment.open_at?
     .small-12.large-4.columns.panel
       .bold Open date:
