realigned relative values across hues

--- a/app/views/home/color_theme.html.haml
+++ b/app/views/home/color_theme.html.haml
@@ -12,12 +12,12 @@
   .color-group
     %h4 Alternative Blues
     .color-bar
-      != color_block_set("alt-blue", %w[ 0 1 2 3 ])
+      != color_block_set("alt-blue", %w[ 00 0 1 2 3 4 5 ])
 
   .color-group
     %h4 Greens
     .color-bar
-      != color_block_set("green", %w[ 0 1 2 3 5 ])
+      != color_block_set("green", %w[ 00 0 1 2 3 4 5 ])
 
   .color-group
     %h4 Warm Hues
