--- a/app/assets/stylesheets/_forms.sass
+++ b/app/assets/stylesheets/_forms.sass
@@ -77,6 +77,10 @@ ul.accepts_submission_types
   background: red
   border: 1px solid red
 
+.high-range.ng-invalid
+  background: red
+  border: 1px solid red
+
 .add-element
   display: none
 
