--- a/app/views/assignments/_view_assignment_management.html.haml
+++ b/app/views/assignments/_view_assignment_management.html.haml
@@ -26,7 +26,7 @@
         - if presenter.group_assignment?
           = render partial: 'assignments/group_show', locals: { presenter: presenter }
         - else
-          = render 'assignments/individual/individual_show'
+          = render partial: 'assignments/individual_show', locals: { presenter: presenter }
       .ui-tabs-panel#tabt2{:role => "tabpanel", "aria-hidden" => false }
         = render 'assignments/description_and_downloads'
 
