--- a/app/views/assignments/individual/_table_head.html.haml
+++ b/app/views/assignments/individual/_table_head.html.haml
@@ -1,31 +1,31 @@
 %tr
-  - if @assignment.is_unlockable?
+  - if presenter.assignment.is_unlockable?
     %th
   %th{:scope => "col"} First Name
   %th{:scope => "col"} Last Name
 
   // If 'Score' only if the assignment type is not student_weightable
-  - if ! @assignment_type.student_weightable? && ! @assignment.pass_fail?
+  - if !presenter.assignment_type.student_weightable? && !presenter.assignment.pass_fail?
     %th{:scope => "col"} Score
-  - elsif @assignment_type.student_weightable?
+  - elsif presenter.assignment_type.student_weightable?
     %th{:scope => "col"} Raw Score
     %th{:scope => "col"} Multiplied Score
-  - elsif @assignment.pass_fail?
+  - elsif presenter.assignment.pass_fail?
     %th{:scope => "col"} Grade
   - if @assignment.has_levels?
     %th Level Earned
 
   %th{:scope => "col"} Read?
 
-  - if @assignment.release_necessary?
+  - if presenter.assignment.release_necessary?
     %th{:scope => "col"} Status
 
-  - if @assignment.accepts_submissions?
+  - if presenter.assignment.accepts_submissions?
     %th{:scope => "col"} Submitted
 
   %th{:style => "min-width: 180px"}
 
-  - if @assignment.release_necessary? && @assignment.grades.present?
+  - if presenter.assignment.release_necessary? && presenter.has_grades?
     %th{"data-dynatable-no-sort" => "true", :width => "120px" }
       %button.button.select-all= "Check"
       %button.button.select-none= "Uncheck"
