--- a/app/views/assignments/_rubric_preview.html.haml
+++ b/app/views/assignments/_rubric_preview.html.haml
@@ -6,13 +6,13 @@
           %label.larger
             <strong>Criterion</strong>:&nbsp;Max&nbsp;points
 
-        %td.tier.heading(colspan="#{@rubric.max_tier_count}")
+        %td.tier.heading(colspan="#{presenter.rubric.max_tier_count}")
           %label.larger
             %strong Level:
             Points Awarded
 
     %tbody
-      - @metrics.each do |metric|
+      - presenter.metrics.each do |metric|
         %tr
           %td.metric
             .metric-heading
@@ -31,6 +31,5 @@
                   - if index < 2
                     .tier-badge-image
                       %img{:src => badge.badge.icon, :class => "tier_badge" }
-          - rubric_max_tier_count = @rubric.max_tier_count
-          - if metric.tiers.size < rubric_max_tier_count
-            %td.filler(colspan="#{rubric_max_tier_count - metric.tiers.size}")
+          - if metric.tiers.size < presenter.rubric_max_tier_count
+            %td.filler(colspan="#{presenter.rubric_max_tier_count - metric.tiers.size}")
