--- a/app/views/assignments/_view_assignment_grades.html.haml
+++ b/app/views/assignments/_view_assignment_grades.html.haml
@@ -1,16 +1,13 @@
-= content_nav_for @assignment
+= content_nav_for presenter.assignment
 
-- if @assignment.pass_fail?
-  %h3.pagetitle= "#{@title} (#{term_for :pass}/#{term_for :fail})"
-- else
-  %h3.pagetitle= "#{@title} (#{ points @assignment.point_total } points)"
+%h3.pagetitle= presenter.title
 
 .pageContent
   = render 'layouts/alerts'
-  
+
   #tabs.ui-tabs.ui-widget
     %ul.ui-tabs-nav{:role => "tablist"}
-      %li 
+      %li
         %a{ "href" => "#tab1"} Description & Downloads
       - if @assignment.rubric and @assignment.rubric.designed? && ! current_student.grade_released_for_assignment?(@assignment)
         %li
@@ -28,7 +25,7 @@
 
     #tabt1.ui-tabs-panel.ui-widget-content{:role => "tabpanel"}
       #tab1.active
-        = render 'assignments/description_and_downloads'
+        = render partial: 'assignments/description_and_downloads', locals: { presenter: presenter }
       - if @assignment.rubric and @assignment.rubric.designed? && ! current_student.grade_released_for_assignment?(@assignment)
         #tab2= render 'assignments/rubric_preview'
       - if @assignment.accepts_submissions? && current_student.submission_for_assignment(@assignment)
@@ -42,6 +39,6 @@
         - if ! current_course.hide_analytics? && ! @assignment.hide_analytics?
           #tab5
             - if @assignment.has_groups?
-              = render "grades/analytics/group_analytics"
+              = render partial: "grades/analytics/group_analytics", locals: { presenter: presenter }
             - else
-              = render "grades/analytics/individual_analytics"
+              = render partial: "grades/analytics/individual_analytics", locals: { presenter: presenter }
