--- a/app/views/analytics/top_10.html.haml
+++ b/app/views/analytics/top_10.html.haml
@@ -9,9 +9,10 @@
 
   = render 'students_table', :course => current_course, :students => @top_ten_students
 
-  %h4.subtitle Bottom 10
+  - if @bottom_ten_students.present?
+    %h4.subtitle Bottom 10
 
-  = render 'students_table', :course => current_course, :students => @bottom_ten_students
+    = render 'students_table', :course => current_course, :students => @bottom_ten_students
 
   - if current_course.teams.present?
     %h4.subtitle #{term_for :team} Overview
