--- a/app/views/students/syllabus/_challenges.haml
+++ b/app/views/students/syllabus/_challenges.haml
@@ -24,8 +24,9 @@
                   = "#{points challenge.challenge_grade_for_team(current_student.team_for_course(current_course)).try(:score)} / #{points challenge.point_total} points"
               - else
                 %span.italic= "#{points challenge.point_total} points possible"
-            - if challenge.future?
-              %td{:width => "25%"}= "#{challenge.due_at.strftime("%A, %B %d, %l:%M%p")}"
+            %td{:width => "25%"}
+              - if challenge.future?
+                = "#{challenge.due_at.strftime("%A, %B %d, %l:%M%p")}"
             
             - if current_user_is_staff?
               %td
