--- a/app/views/assignments/settings.html.haml
+++ b/app/views/assignments/settings.html.haml
@@ -14,164 +14,8 @@
 
   .assignments
     - @assignments.group_by(&:assignment_type).each do |assignment_type, assignments|
-      %h3= "#{assignment_type.try(:name)} – #{points assignment_type.total_points} points"
-      %table{"aria-describedby" => "assignment-type-#{assignment_type.id}"}
-        %thead
-          %tr
-            %th{:scope => "col"} Name
-            %th{:scope => "col"}
-              %span
-                %a
-                  %i.fa.fa-eye.fa-fw
-                .display_on_hover.hover-style
-                  Visible to Students
-            %th{:scope => "col"}
-              %a
-                !
-              .display_on_hover.hover-style
-                Required
-            %th{:scope => "col"}
-              %a
-                %i.fa.fa-paperclip.fa-fw
-              .display_on_hover.hover-style
-                Accepts Submissions
-            %th{:scope => "col"}
-              %a
-                %i.fa.fa-calendar.fa-fw
-              .display_on_hover.hover-style
-                Shown in Timeline
-                
-            %th{:scope => "col"}
-              %a
-                %i.fa.fa-sliders.fa-fw
-              .display_on_hover.hover-style
-                Shown in Predictor
-                
-            %th{:scope => "col"}
-              %a
-                %i.fa.fa-list.fa-fw
-              .display_on_hover.hover-style
-                Shown in Due This Week
-                
-            %th{:scope => "col"}
-              %a
-                %i.fa.fa-pencil.fa-fw
-              .display_on_hover.hover-style
-                Logged By Students
-                
-            %th{:scope => "col"}
-              %a
-                %i.fa.fa-unlock-alt.fa-fw
-              .display_on_hover.hover-style
-                Release Required
-                
-            %th{:scope => "col"}
-              %a
-                %i.fa.fa-envelope.fa-fw
-              .display_on_hover.hover-style
-                Email Students on Release
-                
-            %th{:scope => "col"} Grade Form Preview
-            %th{:scope => "col"} Points
-
-            %th{:scope => "col"} Dates
-            %th{:scope => "col", :style => "min-width: 110px"}
-              %span.sr-only Actions
-        %tbody
-          - assignments.each do |assignment|
-            %tr
-              %td= link_to assignment.name, assignment
-              %td
-                - if assignment.visible?
-                  %a
-                    %i.fa.fa-eye
-                  .display_on_hover.hover-style
-                    Visible to Students
-                    
-              %td
-                - if assignment.required?
-                  %a
-                    Required
-                  .display_on_hover.hover-style
-                    !
-              %td
-                - if assignment.accepts_submissions?
-                  %a
-                    %i.fa.fa-paperclip
-                  .display_on_hover.hover-style
-                    Accepts Submissions
-                    
-              %td
-                - if assignment.include_in_timeline?
-                  %a
-                    %i.fa.fa-calendar
-                  .display_on_hover.hover-style
-                    Shown in Timeline
-                    
-              %td
-                - if assignment.include_in_predictor?
-                  %a
-                    %i.fa.fa-sliders
-                  .display_on_hover.hover-style
-                    Shown in Predictor
-                    
-              %td
-                - if assignment.include_in_to_do?
-                  %a
-                    %i.fa.fa-list.fa-fw
-                  .display_on_hover.hover-style
-                    Shown in Due This Week
-                    
-              %td
-                - if assignment.student_logged?
-                  %a
-                    %i.fa.fa-pencil.fa-fw
-                  .display_on_hover.hover-style
-                    Logged By Students
-                    
-              %td
-                - if assignment.release_necessary?
-                  %a
-                    %i.fa.fa-unlock-alt.fa-fw
-                  .display_on_hover.hover-style
-                    Release Required
-                    
-              %td
-                - if assignment.notify_released?
-                  %a
-                    %i.fa.fa-envelope.fa-fw
-                  .display_on_hover.hover-style
-                    Email Students on Release
-                    
-
-              %td
-                - if assignment.grade_select?
-                  %label.sr-only{:for => "score_levels"}
-                    Score Levels
-                  = select_tag(:assignment_score_levels, options_from_collection_for_select(assignment.assignment_score_levels, :value, :name))
-                - elsif assignment.grade_radio?
-                  - assignment.assignment_score_levels.each do |asl|
-                    = radio_button_tag(asl.name, asl.value)
-                    %span.not_bold= label_tag(asl.name)
-                    %br
-                - elsif assignment.grade_checkboxes?
-                  = check_box_tag 'score', '', false, :disabled => true
-                - else
-                  = text_field_tag 'score', '', :disabled => true
-              %td= points assignment.point_total
-              %td
-                %ul
-                  %li
-                    Opens:
-                    = assignment.try(:opens_at) || "Always Open"
-                  %li
-                    Due At:
-                    = assignment.try(:due_at) || "No Due Date"
-                  %li
-                    Accepted Until:
-                    = assignment.try(:accept_until) || "Always Accepted"
-              %td
-                .right
-                  %ul.button-bar
-                    %li= link_to raw('<i class="fa fa-edit fa-fw"> </i> Edit'), edit_assignment_path(assignment), :class => 'button'
-                    %li= link_to raw('<i class="fa fa-trash fa-fw"> </i> Delete'), assignment_path(assignment), :data => { confirm: 'Are you sure?', method: :delete },  :class => 'button'
+      - assignments.each do |assignment|
+        %div
+          = assignment.try(:name)
+          = assignment.try(:assignment_type_id)
+          = assignment.try(:assignment_type)
