--- a/app/views/info/resubmissions.html.haml
+++ b/app/views/info/resubmissions.html.haml
@@ -34,7 +34,7 @@
           %th{:scope => "col", :style => "min-width: 300px" }
             %span.sr-only Actions
       %tbody
-        - @resubmissions.each do |re|
+        - resubmissions.each do |re|
           %tr
             - if re.assignment.is_individual?
               %td= link_to re.student.try(:first_name), student_path(re.student)
@@ -53,6 +53,9 @@
                     %li= link_to raw("<i class='fa fa-edit fa-fw'></i> Edit Grade"), edit_assignment_grade_path(:assignment_id =>assignment.id, :student_id => re.student.try(:id)), :class => "button"
             - elsif re.assignment.has_groups?
               %td= link_to re.group.try(:name), group_path(:id => re.group.id)
+              %td
+              %td
+              %td= re.updated_at
               %td
                 .right
                   %ul.button-bar
